# drivecleanup

./: .gitignore  README.md  REFACTORING.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  clean_duplicates.py  clean_obsolete.py  cleanup_core.py  config.py  content_extractor.py  drivecleanup.py  pyproject.toml  test_clean_obsolete.py  test_drivecleanup.py  utils.py
prompts/: claude_file_analysis.txt
