[project]
name = "drivecleanup"
version = "0.1.0"
description = "Intelligent Google Drive cleanup tool with Claude AI analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "loguru>=0.7.2",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "boto3>=1.34.0",
]

[project.scripts]
drivecleanup = "drivecleanup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
